<resources>
    <string name="app_name">Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Favorites</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="what_would_you_want_to_eat">What would you want to eat</string>
    <string name="over_popular_items">over popular items</string>
    <string name="area">Area :</string>
    <string name="like_button">Like button</string>
    <string name="details_image">details image</string>
    <string name="youtube">youtube</string>
    <string name="instructions">Instructions :</string>
    <string name="no_favorites">No Favorites...</string>
    <string name="read_more">Read more ...</string>
    <string name="country">Country</string>
    <string name="type_meal_name">Type meal name ...</string>
</resources>