<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.MealBottomSheetFragment"
    android:id="@+id/bottom_sheet">

    <ImageView
        android:id="@+id/img_category"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:contentDescription="@string/category" />

    <LinearLayout
        android:id="@+id/linear_meal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_100sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_category"
        app:layout_constraintTop_toTopOf="@id/img_category">

        <TextView
            android:id="@+id/tv_meal_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_weight="1"
            android:textColor="@color/g_black"
            app:drawableLeftCompat="@drawable/ic_area" />

        <TextView
            android:id="@+id/tv_meal_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_weight="1"
            android:textColor="@color/g_black"
            app:drawableLeftCompat="@drawable/category"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_meal_name_in_btm_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_meal_info"
        app:layout_constraintStart_toEndOf="@id/img_category"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/category"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/g_black"/>

    <TextView
        android:id="@+id/tv_read_more_btm_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_meal_name_in_btm_sheet"
        app:layout_constraintStart_toEndOf="@id/img_category"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/g_black"
        android:text="@string/read_more"
        android:textSize="@dimen/_14ssp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>